Fix modules not aligning

--- a/app/component/module/skills/skills.module.css
+++ b/app/component/module/skills/skills.module.css
@@ -4,7 +4,6 @@
     overflow: clip;
     padding: 14px 0;
     position: relative;
-    width: 425px;
 }
 
 .LeftWing,
