--- a/app/globals.css
+++ b/app/globals.css
@@ -41,7 +41,3 @@ a:hover {
   text-align: initial;
   width: 1080px;
 }
-
-.row {
-  display: flex;
-}
